syntax = "proto3";

option csharp_namespace = "Ds.Full.Grpc.Protos.Rentals";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

package RentalPkg;




message RentalFilterMsg
{
	optional int32                                              PageSize                                          = 1  ;
	optional int32                                              PageIndex                                         = 2  ;
	optional int32                                              UserId                                            = 3  ;
	optional string                                             CustomerName                                      = 4  ;
}

message RentalMsg
{
	optional CommonPkg.HeaderMsg                                Headers                                           = 1  ;
	         int32                                              Id                                                = 2  ;
	         google.protobuf.Timestamp                          CreateDate                                        = 3  ;
             int32                                              CreateOffset                                      = 4  ;
	         google.protobuf.Timestamp                          UpdateDate                                        = 5  ;
             int32                                              UpdateOffset                                      = 6  ;
             int64                                              UserId                                            = 6  ;
             string                                             UserName                                          = 6  ;
             int64                                              CustomerId                                        = 6  ;
             string                                             CustomerName                                      = 6  ;
    optional int64                                              PaymentId                                         = 6  ;
	optional google.protobuf.Timestamp                          PaymentDate                                       = 5  ;
    optional int32                                              PaymentOffset                                     = 6  ;


	         string                                             Code                                              = 7  ;
	         string                                             Description                                       = 8  ;
	repeated ProfileUserListMsg                                 UserList                                          = 9  ;
	optional CommonPkg.ReturnMsg                                Returns                                           = 10 ;
}




message RentalItemIdMsg
{
	optional int64                                              Id                                                = 1  ;
	optional int64                                              RentalId                                          = 1  ;
	optional int64                                              InventoryId                                       = 1  ;
}